substrate/frame/support/test/tests/pallet_ui/call_invalid_vis.stderr
error: Invalid pallet::call, dispatchable function must be public: `pub fn`
  --> tests/pallet_ui/call_invalid_vis.rs:37:3
   |
37 |         fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {
   |         ^^
